[tool.poetry]
name = "depoverflow"
version = "0.1.0"
description = "Watches StackOverflow answers and GitHub issues referenced in code for changes"
authors = ["Remi Rampin <remi@rampin.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
