[tool.poetry]
name = "depoverflow"
version = "0.1.0"
description = "Watches StackOverflow answers and GitHub issues referenced in code for changes"
authors = ["Remi Rampin <remi@rampin.org>"]
license = "MIT"

[tool.poetry.plugins."depoverflow.items"]
"stackexchange-question" = "depoverflow.stackexchange:StackExchangeQuestion"
"stackexchange-answer" = "depoverflow.stackexchange:StackExchangeAnswer"
"github-issue" = "depoverflow.github:GithubIssue"
"github-pr" = "depoverflow.github:GithubPullRequest"

[tool.poetry.scripts]
depoverflow = "depoverflow.main:main"

[tool.poetry.dependencies]
python = "^3.7"
toml = ">=0.10,<0.11"
requests = ">=2,<3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
